--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 env
 **/*.pyc
 **/__pycache__
+**/migrations
 .DS_Store
 *.sqlite3
 *.env
@@ -10,3 +11,4 @@ env
 !.travis.yml
 /.env
 /.vscode
+**/migrations/__init__.py
